[package]
name = "moq-goaway-demo"
version = "0.0.0"
edition = "2024"
publish = false
description = "Diamond-topology GOAWAY failover demo"
rust-version.workspace = true

[[bin]]
name = "goaway-publisher"
path = "src/bin/publisher.rs"

[[bin]]
name = "goaway-verifier"
path = "src/bin/verifier.rs"

[[bin]]
name = "goaway-mid"
path = "src/bin/mid.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
humantime = "2.1"
moq-native = { workspace = true }
moq-net = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
